Alterações do menu

--- a/index.html
+++ b/index.html
@@ -10,10 +10,30 @@
 <body>
     <header class="cabecalho">
         <div class="container">
-            <span class="cabecalho_menu_hamburger container_imagem"></span>
+            <input class="container_botao" type="checkbox" id="menu">
+            <label for="menu">
+                <span class="cabecalho_menu_hamburger container_imagem"></span>
+            </label>
+            <ul class="lista_menu">
+                <li class="lista_menu_titulo">Programação</li>
+                <li class="lista_menu_item">
+                    <a href="#" class="lista_menu_link">Programação</a>
+                </li>
+                <li class="lista_menu_item">
+                    <a href="#" class="lista_menu_link">Front-end</a>
+                </li>
+                <li class="lista_menu_item">
+                    <a href="#" class="lista_menu_link">Infraestrutura</a>
+                </li>
+                <li class="lista_menu_item">
+                    <a href="#" class="lista_menu_link">Business</a>
+                </li>
+                <li class="lista_menu_item">
+                    <a href="#" class="lista_menu_link">Design de cores</a>
+                </li>
+            </ul>
             <img src="./img/Logo.svg" alt="Logo do alurabooks">
         </div>
-        
         <div class="container">
             <a href="#"><img class="container_imagem" src="./img/Favoritos.svg" alt="Meus favoritos"></a>
             <a href="#"><img class="container_imagem" src="./img/Compras.svg" alt="Minha sacola de compras"></a>
