--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="Reset.css">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
@@ -15,7 +18,7 @@
                 <span class="cabecalho_menu_hamburger container_imagem"></span>
             </label>
             <ul class="lista_menu">
-                <li class="lista_menu_titulo">Programação</li>
+                <li class="lista_menu_titulo">Categorias</li>
                 <li class="lista_menu_item">
                     <a href="#" class="lista_menu_link">Programação</a>
                 </li>
