--- a/index.html
+++ b/index.html
@@ -44,5 +44,10 @@
         </div>
         
     </header>
+    <section class="banner">
+        <h2 class="banner_titulo">Já sabe por onde começar?</h2>
+        <p class="banner_texto">Encontre em nossa estante o que precisa para o seu desenvolvimento!</p>
+        <input class="banner_pesquisa" type="search" placeholder="Qual será sua proxima leitura?">
+    </section>
 </body>
 </html>
