Finalização design mobile, Adição de rodapé e Criação dos tópicos

--- a/index.html
+++ b/index.html
@@ -92,6 +92,91 @@
             </div>
 
     </section>
+
+    <section class="carrossel_mais-vendido">
+        <h2 class="carrossel_titulo">Mais vendidos</h2>
+
+        <div class="swiper">
+            <div class="swipper-pagination">
+
+            </div>
+
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
+                <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="Livro sobre Acessibilidade "></div>                
+                <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro sobre apachge kafka e spring boot da alura books"></div>
+                <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
+                <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre Javascrip assertivo"></div>
+            </div>
+
+        <div class="card">
+            <div class="card_descrição">
+                <div class="descrição">
+                    <div class="card_estrelas">
+                        <img src="img/Star.svg" class="estrela_1">
+                        <img src="img/Star.svg" class="estrela_2">
+                        <img src="img/Star.svg" class="estrela_3">
+                        <img src="img/Star.svg" class="estrela_4">
+                        <img src="img/Star.svg" class="estrela_5">
+                    </div>
+                    <h3 class="descrição_titulo">Autora do mês</h3>
+                    <h2 class="descrição_titulo-livro">Juliana Agarikov</h2>
+                    <p class="descrição_texto">Analista de sistemas e escritora, Juliana é especialista em Front-end.</p>
+                </div>
+                <img src="img/Perfil-escritora 1.svg" class="descrição__imagem">
+            </div>
+            <div class="card_botões">
+                <ul class="botões">
+                    <li class="botões_item"><img src="img/Favoritos.svg" alt="Favoritar escritor"></li>
+                    <li class="botões_item"><img src="img/Compras.svg" alt="Amei escritor"></li>
+                </ul>
+                <a class="botões_ancora" href="#">Saiba mais</a> 
+            </div>
+        </div>
+    </section>
+
+    <section class="tópicos">
+        <h2 class="tópicos_titulo">TÓPICOS VISITADOS RECENTEMENTS</h2>
+        <ul class="tópicos_lista">
+            <li class="tópicos_item">
+                <a class="tópicos_link" href="#">Android</a> 
+            </li>
+            <li class="tópicos_item">
+                <a class="tópicos_link" href="#">Marketing Digital</a> 
+            </li>
+            <li class="tópicos_item">
+                <a class="tópicos_link" href="#">Agile</a> 
+            </li>
+            <li class="tópicos_item">
+                <a class="tópicos_link" href="#">Startups</a> 
+            </li>
+            <li class="tópicos_item">
+                <a class="tópicos_link" href="#">Html e CSS</a> 
+            </li>
+            <li class="tópicos_item">
+                <a class="tópicos_link" href="#">Python</a> 
+            </li>
+            <li class="tópicos_item">
+                <a class="tópicos_link" href="#">Orientação a objeto</a> 
+            </li>
+            <li class="tópicos_item">
+                <a class="tópicos_link" href="#">JAVA</a> 
+            </li>
+        </ul>
+    </section>
+
+    <section class="contato">
+        <h2 class="contato_titulo">Fique por dentro das novidades</h2>
+        <p class="contato_texto">Atualização de E-books, novos livros, promoções e outros.</p>
+        <input class="contato_email" type="email" placeholder="Cadastre seu e-mail">    
+    </section>
+
+    <hr/>
+
+    <footer class="rodapé">
+        <h2 class="rodapé_titulo">Grupo alura</h2>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
