--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <header class="cabecalho">
         <div class="container">
-            <input class="container_botao" type="checkbox" id="menu">
-            <label for="menu">
+            <input class="container_botão" type="checkbox" id="menu">
+            <label for="menu" class="container_rotulo">
                 <span class="cabecalho_menu_hamburger container_imagem"></span>
             </label>
             <ul class="lista_menu">
@@ -43,7 +43,7 @@
         
         <ul class="opções">
             <input class="opções_botão" type="checkbox" id="opções_menu">
-            <label for="opções_menu">
+            <label for="opções_menu" class="opções_rotulo">
                 <li class="opções_item">Categorias</li>
             </label>
             
@@ -71,9 +71,17 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img class="container_imagem container_imagem-transparente" src="./img/Favoritos.svg" alt="Meus favoritos"></a>
-            <a href="#"><img class="container_imagem" src="./img/Compras.svg" alt="Minha sacola de compras"></a>
-            <a href="#"><img class="container_imagem" src="./img/Usuario.svg" alt="Meu usuario"></a>
+            <a href="#">
+                <img class="container_imagem container_imagem-transparente"
+                 src="./img/Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#" class="container_link">
+                <img class="container_imagem" src="./img/Compras.svg" alt="Minha sacola de compras">
+                <p class="container_texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container_link">
+                <img class="container_imagem" src="./img/Usuario.svg" alt="Meu usuario">
+                <p class="container_texto">Meu perfil</p>
+            </a>
         </div>
     </header>
 
@@ -85,6 +93,7 @@
 
     <section class="carrossel">
         <h2 class="carrossel_titulo">Novos lançamentos</h2>
+        <div class="carrossel_container">
             <div class="swiper">
                 <div class="swiper-pagination"></div>
                 <div class="swiper-wrapper">
@@ -124,11 +133,12 @@
                     <a class="botões_ancora" href="#">Saiba mais</a> 
                 </div>
             </div>
-
+        </div>
     </section>
 
     <section class="carrossel">
         <h2 class="carrossel_titulo">Mais vendidos</h2>
+        <div class="carrossel_container">
             <div class="swiper">
                 <div class="swiper-pagination"></div>
                 <div class="swiper-wrapper">
@@ -147,29 +157,29 @@
             </div>
 
             <!--1ª linha-->
-        <div class="card">
-            <!--1ª coluna-->
-            <div class="card_descrição">
-                <div class="descrição">
-                    <img src="img/Estrelinhas.svg" alt="Avaliação">
-                    <h3 class="descrição_titulo">Autora do mês</h3>
-                    <h2 class="descrição_titulo-livro">Juliana Agarikov</h2>
-                    <p class="descrição_texto">Analista de sistemas e escritora, Juliana é especialista em Front-end.</p>
+            <div class="card">
+                <!--1ª coluna-->
+                <div class="card_descrição">
+                    <div class="descrição">
+                        <img src="img/Estrelinhas.svg" alt="Avaliação">
+                        <h3 class="descrição_titulo">Autora do mês</h3>
+                        <h2 class="descrição_titulo-livro">Juliana Agarikov</h2>
+                        <p class="descrição_texto">Analista de sistemas e escritora, Juliana é especialista em Front-end.</p>
+                    </div>
+                    <img src="img/Perfil-escritora 1.svg" class="descrição__imagem">
                 </div>
-                <img src="img/Perfil-escritora 1.svg" class="descrição__imagem">
-            </div>
-            <!--2ª linha-->
-            <div class="card_botões">
-                <!-- 1ª coluna-->
-                <ul class="botões">
-                    <li class="botões_item"><img src="img/Favoritos.svg" alt="Favoritar escritor"></li>
-                    <li class="botões_item"><img src="img/Compras.svg" alt="Amei escritor"></li>
-                </ul>
-                <!-- 2ª coluna-->
-                <a class="botões_ancora" href="#">Saiba mais</a> 
+                <!--2ª linha-->
+                <div class="card_botões">
+                    <!-- 1ª coluna-->
+                    <ul class="botões">
+                        <li class="botões_item"><img src="img/Favoritos.svg" alt="Favoritar escritor"></li>
+                        <li class="botões_item"><img src="img/Compras.svg" alt="Amei escritor"></li>
+                    </ul>
+                    <!-- 2ª coluna-->
+                    <a class="botões_ancora" href="#">Saiba mais</a> 
+                </div>
             </div>
         </div>
-
     </section>
 
     <section class="tópicos">
